# MCIDE

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  index.html  index.html.backup  nbt-encoder.js  pako.min.js  renderer.js  renderer.js.backup  renderer3d.js  serve.bat  style.css  textures.js  three.min.js
.cargo/: config.toml
.github/workflows/: deploy.yml
data/: versions.json
src/: blocks.json  lib.rs
